# eng-thesis-autonomous-mobile-robot

./: .gitignore  Makefile  README.md
3d-model/: README.md  README.pl.md  model-v5.blend1  model-v6.blend  model-v6.blend1  model-v6.stl
3d-model/models/: 18650-v13.stl  URG-04LX-UG01.dxf  model-v10.stl  model-v11.stl  model-v12.stl  model-v13.stl  model-v14.stl  model-v6-2.stl  model-v8.stl  model-v9.stl
3d-model/projects/: model-v5.blend  model-v6.blend
build-instruction/: README.md  README.pl.md
documentation/: Makefile  prepare_ros_experimental_environment.md  ubuntu_server_setup.md
miabot-communication-module/: Makefile  README.md  README.pl.md
miabot-communication-module/test/: commands.py  send_commands.py  simple_terminal.py  test_send_data.py
nodes/: README.md
nodes/config/: nav2_params.yaml  nav2_params2.yaml  params_serial.yaml  slam.yaml
nodes/exploration_algorithm/: package.xml
nodes/exploration_algorithm/exploration_algorithm/: exploration_algorithm_node.py  exploration_algorithm_node_old.py  exploration_algorithm_node_old_v2.py
nodes/miabot/: miabot_node.py  package.xml  setup.py
nodes/miabot_node/: package.xml  setup.py
nodes/miabot_node/miabot_node/: miabot_node.py
nodes/project_bringup/config/: nav2_params.yaml  slam.yaml
nodes/project_bringup/launch/: pc_bringup.launch.py
results/: frames_2023-12-23_18.12.47.gv  result_map.pgm  result_map.yaml
robot-autonomous-move/: Makefile  main.py  test.py
robot-autonomous-move/robot_drive_lib/: commands.py
robot-autonomous-move/src/configurations/: config.py
(+3 files in other folders)
