<?xml version=1.0?>
<package format=3>
  <name>miabot</name>
  <version>0.1.0</version>
  <description>ROS 2 package for a MiaBot node</description>
  <maintainer email=your_email@example.com>Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
</package>

